# tracel

./: .editorconfig  .gitignore  CLI_REFACTOR_SUMMARY.md  Cargo.toml  DATASET_MODULE_REVIEW.md  HANDOUT.md  NOTICES.md  README.md  _typos.toml  run-checks.ps1  run-checks.sh  setup-toolchain.sh
.cargo/: config.toml
crates/burn-central/: Cargo.toml
crates/burn-central-api/: Cargo.toml
crates/burn-central-api/src/: client.rs  credentials.rs  error.rs  lib.rs  mod.rs  schemas.rs
crates/burn-central-api/src/schemas/: experiment.rs  request.rs  response.rs
crates/burn-central-cli/: Cargo.toml  README.md
crates/burn-central-cli-macros/: Cargo.toml
crates/burn-central-cli-macros/src/: lib.rs  name_value.rs
crates/burn-central-cli/src/: app_config.rs  cargo.rs  cli.rs  context.rs  execution.rs  lib.rs  logging.rs  registry.rs  runner.rs  terminal.rs
crates/burn-central-cli/src/burn_dir/: cache.rs  mod.rs  project.rs
crates/burn-central-cli/src/cli_commands/: init.rs  login.rs  mod.rs
crates/burn-central-cli/src/commands/: init.rs  login.rs  me.rs  mod.rs  package.rs  project.rs  time.rs  training.rs  unlink.rs
crates/burn-central-cli/src/compute_provider/: mod.rs
crates/burn-central-cli/src/discovery/: functions.rs
crates/burn-central-cli/src/entity/: mod.rs
crates/burn-central-cli/src/generation/: burn_dir.rs  filetree.rs  mod.rs
crates/burn-central-cli/src/helpers/: project.rs
crates/burn-central-cli/src/tools/: function_discovery.rs  functions_registry.rs  git.rs  mod.rs  terminal.rs
crates/burn-central-cli/src/util/: git.rs  mod.rs
crates/burn-central-client/: Cargo.toml  README.md
crates/burn-central-client/src/: artifacts.rs  burn_central.rs  client.rs  credentials.rs  error.rs  lib.rs  model.rs  models.rs  schemas.rs
crates/burn-central-client/src/api/: client.rs  error.rs  mod.rs  schemas.rs
crates/burn-central-client/src/artifacts/: client.rs  mod.rs  schemas.rs  scope.rs
crates/burn-central-client/src/command/: train.rs
crates/burn-central-client/src/errors/: client.rs
crates/burn-central-client/src/experiment/: args.rs  base.rs  config.rs  error.rs  log_store.rs  message.rs  mod.rs  socket.rs  thread.rs  ws_messages.rs
crates/burn-central-client/src/http/: client.rs  error.rs  mod.rs  schemas.rs
crates/burn-central-client/src/log/: application_logger.rs  mod.rs
crates/burn-central-client/src/metrics/: metric_logger.rs
crates/burn-central-client/src/models/: client.rs  mod.rs  schemas.rs  scope.rs
crates/burn-central-client/src/record/: artifact.rs  checkpoint.rs  mod.rs  recorder.rs
crates/burn-central-client/src/websocket/: client.rs  error.rs
crates/burn-central-core/: Cargo.toml
crates/burn-central-core/src/: client.rs  lib.rs
crates/burn-central-core/src/artifacts/: client.rs  schemas.rs
crates/burn-central-core/src/bundle/: core.rs  mod.rs
crates/burn-central-core/src/experiment/: base.rs  error.rs  log_store.rs  mod.rs  socket.rs
crates/burn-central-core/src/metrics/: metric_logger.rs
crates/burn-central-core/src/models/: client.rs  schemas.rs
crates/burn-central-dataset/: Cargo.toml
crates/burn-central-dataset/src/: lib.rs
crates/burn-central-domain/: Cargo.toml
crates/burn-central-experiment/: Cargo.toml
crates/burn-central-experiment/src/: lib.rs  progress.rs  session.rs
crates/burn-central-fleet/: Cargo.toml
crates/burn-central-fleet/src/: inference.rs
crates/burn-central-lib/: Cargo.toml  README.md
crates/burn-central-lib/src/: config.rs  context.rs  lib.rs  logging.rs
crates/burn-central-macros/: Cargo.toml
crates/burn-central-macros/src/: lib.rs
crates/burn-central-package/: Cargo.toml
crates/burn-central-package/src/: lib.rs
crates/burn-central-runtime/: Cargo.toml
crates/burn-central-runtime/src/: backend.rs  cli.rs  error.rs  executor.rs  inference.rs  input.rs  lib.rs  model.rs  output.rs  param.rs  routine.rs  service.rs  type_name.rs  types.rs  workflow.rs
crates/burn-central/src/: lib.rs
crates/burn-station/: Cargo.toml
crates/burn-station/src/: lib.rs  station.rs
crates/heat-macros/: Cargo.toml
crates/heat-macros/src/: backend.rs  inference.rs  lib.rs  training.rs
crates/heat-sdk/: Cargo.toml  README.md
crates/heat-sdk-cli/: Cargo.toml  README.md
crates/heat-sdk-cli-macros/: Cargo.toml  README.md
crates/heat-sdk-cli-macros/src/: backend.rs  inference.rs  lib.rs  metadata.rs  name_value.rs  training.rs
crates/heat-sdk-cli/src/: cli.rs  config.rs  context.rs  crate_gen.rs  lib.rs  logging.rs  paths.rs  registry.rs  run.rs
crates/heat-sdk/src/: cli.rs  client.rs  error.rs  experiment.rs  http_schemas.rs  lib.rs  run.rs  schemas.rs  ws_messages.rs
crates/tracel-app/: Cargo.toml
crates/tracel-app/src/: job.rs  job_register.rs  lib.rs
crates/tracel-artifact/: Cargo.toml
crates/tracel-artifact/src/: download.rs  lib.rs  transfer.rs  upload.rs
crates/tracel-cli/: Cargo.toml  MAPPERS.md
crates/tracel-cli/src/: cli.rs  error.rs  job.rs  lib.rs
crates/tracel-cloud/: Cargo.toml
crates/tracel-cloud/src/: lib.rs
crates/tracel-core/: Cargo.toml
crates/tracel-core/src/: connection.rs  connexion.rs  context.rs  download_file.rs  lib.rs
crates/tracel-experiment/: Cargo.toml
crates/tracel-experiment/src/: activity.rs  cancellation.rs  context.rs  control.rs  error.rs  lib.rs  local.rs  log.rs  progress.rs  provider.rs  reader.rs  session.rs
crates/tracel-fleet/: Cargo.toml
crates/tracel-fleet/src/: auth_client.rs  error.rs  inference.rs  lib.rs  model.rs  session.rs  state.rs
crates/tracel-inference/: Cargo.toml
crates/tracel-inference/src/: context.rs  erased.rs  error.rs  inference.rs  input.rs  lib.rs  observer.rs  output.rs  provider.rs  reader.rs  session.rs  sink.rs  stream.rs  writer.rs
crates/tracel-macros/: Cargo.toml
crates/tracel-macros/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs  runchecks.rs
xtask/src/commands/: check.rs  ci.rs  dependencies.rs  mod.rs  pull_request_checks.rs  test.rs  vulnerabilities.rs
xtask/src/utils/: cargo.rs  mod.rs  process.rs  prompt.rs  rustup.rs  workspace.rs
(+399 files in other folders)
