[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
version = "0.2.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
authors = ["Tracel Technologies Inc."]
repository = "https://github.com/tracel-ai/burn-central"
keywords = ["tracel", "burn-central", "burn", "sdk"]
categories = ["development-tools"]

[workspace.dependencies]
burn = { version = "0.20.0-pre.4", default-features = false, features = ["train"]  }

anyhow = "1.0.98"
toml = "0.8.22"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
derive-new = { version = "0.7.0", default-features = false }
log = {version = "0.4.27",features = ["std"] }
once_cell = "1.21.3"
proc-macro2 = { version = "1.0.95" }
quote = "1.0.40"
reqwest = "0.12.19"
regex = "1.11.1"
rstest = "0.25.0"
serde = { version = "1.0.224", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
serde_json = "1.0.140"
syn-serde = { version = "0.3.1", features = ["json"] }
sha2 = { version = "0.10.9" }
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.101", features = ["extra-traits", "full"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
crossbeam = { version = "0.8.4", default-features = false, features = [
    "crossbeam-channel",
    "std",
] }
json-patch = { version = "4.0.0", default-features = false }
variadics_please = "1.1.0"
tynm = { version = "0.2.0", features = ["info"] }
derive_more = { version = "2.0.1", default-features = false, features = [
    "deref",
    "from",
    "display",
    "unwrap",
]}
env_logger = "0.11.8"
chrono = "0.4.41"
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.33" }
tracing-subscriber = { version = "0.3.20" }

## External Crate
# burn-central-client = { version = "0.3.0", path = "../client/burn-central-client" }
burn-central-client = "0.3.0"

## Crate
burn-central-core = { version = "0.2.0", path = "crates/burn-central-core" }
burn-central-runtime = { version = "0.2.0", path = "crates/burn-central-runtime" }
burn-central-macros = { version = "0.2.0", path = "crates/burn-central-macros" }
burn-central-workspace = { version = "0.1.0", path = "crates/burn-central-workspace" }
burn-central-cli = { version = "0.1.0", path = "crates/burn-central-cli" }

### For xtask crate ###
tracel-xtask = { version = "4.5.0" }

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
