[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
version = "0.6.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
authors = ["Tracel Technologies Inc."]
repository = "https://github.com/tracel-ai/burn-central"
keywords = ["tracel", "burn-central", "burn", "sdk"]
categories = ["development-tools"]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "1b6dd60361115a0efb5b67c43cb75cd856b30498", default-features = false, features = [
    "train",
] }

url = "2.5.8"
anyhow = "1.0.101"
clap = { version = "4.5", features = ["derive"] }
derive-new = { version = "0.7.0", default-features = false }
log = { version = "0.4.27", features = ["std"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
serde_json = "1.0.149"
syn-serde = { version = "0.3.1", features = ["json"] }
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.114", features = ["extra-traits", "full"] }
thiserror = "2.0.18"
crossbeam = { version = "0.8.4", default-features = false, features = [
    "crossbeam-channel",
    "std",
] }
json-patch = { version = "4.1.0", default-features = false }
variadics_please = "1.1.0"
tynm = { version = "0.2.0", features = ["info"] }
derive_more = { version = "2.1.1", default-features = false, features = [
    "deref",
    "from",
    "display",
    "unwrap",
] }
chrono = "0.4.43"
tracing = "0.1.44"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.22"
opentelemetry = { version = "0.31.0", features = ["metrics"] }

## External Crate
burn-central-client = { version = "0.7.0", default-features = false, features = [
    "central",
    "station",
] }

## Crate
tracel-runtime = { path = "crates/tracel-runtime", version = "0.6.0" }
tracel-macros = { path = "crates/tracel-macros", version = "0.6.0" }
tracel-inference = { path = "crates/tracel-inference", version = "0.6.0" }
tracel-fleet = { path = "crates/tracel-fleet", version = "0.6.0" }
tracel-artifact = { path = "crates/tracel-artifact", version = "0.6.0" }
tracel-experiment = { path = "crates/tracel-experiment", version = "0.6.0" }
tracel-core = { path = "crates/tracel-core", version = "0.6.0" }

### For xtask crate ###
tracel-xtask = "4.13.7"

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
