[package]
name = "burn-central-api"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
derive-new = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
