[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Macros for Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "macros"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli-macros"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/head-sdk-cli-macros"
version.workspace = true
rust-version = "1.79"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
syn-serde = { version = "0.3.1", features = ["json"] }

[features]
build-cli = []
