[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Macros for Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "macros"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli-macros"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-cli-macros"
version.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
syn-serde = { workspace = true }

[features]
build-cli = []
