[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "sdk", "cli"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-cli"
version.workspace = true
rust-version.workspace = true

[dependencies]
burn-central-client = { path = "../burn-central-client", version = "0.1.0" }

anyhow = { workspace = true }

clap = { workspace = true, features = ["derive", "cargo"] }
colored = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

inventory = "0.3"
once_cell = "1.21"
syn = { workspace = true }
quote = { workspace = true }
prettyplease = "0.2.33"
toml_edit = "0.22.26"
toml = "0.8.22"
proc-macro2 = { workspace = true }
syn-serde = { version = "0.3.1", features = ["json"] }
url = "2.5.4"
cargo_metadata = "0.20.0"
gix = { version = "0.72.1", default-features = false, features = ["dirwalk", "status"]}
directories = "6"
chrono = "0.4.41"
console = "0.15.8"
cliclack = "0.3.6"
thiserror = { workspace = true }
burn-central-package = { path = "../burn-central-package", version = "0.1.0" }