[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "sdk", "cli"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-cli"
version.workspace = true
rust-version.workspace = true

[dependencies]
burn-central-api = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
colored = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn-serde = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
regex = { workspace = true }

toml_edit = "0.22.26"
inventory = "0.3"
prettyplease = "0.2.33"
url = "2.5.4"
cargo_metadata = "0.20.0"
cargo-util-schemas = "0.8.1"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib"] }
tar = { version = "0.4.44", default-features = false }
walkdir = "2"
ignore = "0.4.23"
gix = { version = "0.72.1", default-features = false, features = ["dirwalk", "status"]}
unicase = "2.8.1"
lazycell = "1.3.0"
serde-untagged = "0.1.7"
serde_ignored = "0.1.12"
sha2 = "0.10"
pathdiff = "0.2.3"
directories = "6"
console = "0.15.8"
cliclack = "0.3.6"
chrono = "0.4.41"
