[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "sdk", "cli"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-cli"
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "burn"
path = "src/bin/burn.rs"



[dependencies]
burn-central-workspace = { workspace = true }
burn-central-client = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
colored = { workspace = true }
console = "0.15.8"
cliclack = "0.3.6"
directories = "5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "function_registration_example"
path = "examples/function_registration_example.rs"

[features]
default = []
build-tools = []
