[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central Client."
keywords = ["tracel", "burn-central", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "burn-central-client"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/head-sdk"
version.workspace = true
rust-version = "1.79"

[features]

[dependencies]
# todo: temporary fix until burn updates its bincode version to 2.0.0
bincode = "=2.0.0-rc.3"
burn = { workspace = true, features = ["train"] }

derive-new = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1.40" }
tracing-core = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.18" }
tungstenite = { version = "0.24.0", features = ["native-tls"] }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
