[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central Client."
keywords = ["tracel", "burn-central", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "burn-central-client"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-client"
version.workspace = true
rust-version.workspace = true

[features]

[dependencies]
# todo: temporary fix until burn updates its bincode version to 2.0.0
bincode = "2.0.1"
burn = { workspace = true, features = ["train"] }

derive-new = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.33" }
tracing-subscriber = { version = "0.3.19" }
tungstenite = { version = "0.26.2", features = ["native-tls"] }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
crossbeam = { workspace = true, default-features = false, features = ["crossbeam-channel", "std"] }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
anyhow = { workspace = true }