[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central Client."
keywords = ["tracel", "burn-central", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "burn-central-core"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-client"
version.workspace = true
rust-version.workspace = true

[features]

[dependencies]
burn = { workspace = true, features = ["train"] }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.33" }
tracing-subscriber = { version = "0.3.20" }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
crossbeam = { workspace = true, default-features = false, features = [
    "crossbeam-channel",
    "std",
] }
json-patch = { workspace = true }
burn-central-client = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
anyhow = { workspace = true }
