[package]
name = "burn-central-core"
authors.workspace = true
categories.workspace = true
description = "Burn Central Client."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
burn.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
regex.workspace = true
once_cell.workspace = true
crossbeam.workspace = true
json-patch.workspace = true
burn-central-client.workspace = true

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
anyhow = { workspace = true }
