[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central."
keywords = ["tracel", "burn-central", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "burn-central-domain"
readme.workspace = true
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central"
version.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4.41"
