[package]
name = "burn-central-experiment"
description = "Experiment tracking primitives for Burn Central and local runs"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["station"]
station = ["burn-central-client/station"]

[dependencies]
thiserror.workspace = true
burn-central-artifact.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
burn.workspace = true

# Remote experiment dependencies
burn-central-client = { workspace = true, features = ["central"] }
crossbeam.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
