[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central core library for project management and code generation."
keywords = ["tracel", "burn-central", "burn", "sdk", "library"]
edition.workspace = true
license.workspace = true
name = "burn-central-lib"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-lib"
version.workspace = true
rust-version.workspace = true

[dependencies]
burn-central-client = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn-serde = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

toml_edit = "0.22.26"
prettyplease = "0.2.33"
url = "2.5.4"
cargo_metadata = { version = "0.20.0", features = ["builder"] }
cargo-util-schemas = "0.8.1"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib"] }
tar = { version = "0.4.44", default-features = false }
walkdir = "2"
ignore = "0.4.23"
gix = { version = "0.72.1", default-features = false, features = ["dirwalk", "status"]}
unicase = "2.8.1"
lazycell = "1.3.0"
serde-untagged = "0.1.7"
serde_ignored = "0.1.12"
sha2 = "0.10"
pathdiff = "0.2.3"
directories = "6"

[dev-dependencies]
tempfile = "3.8"
env_logger = { workspace = true }

[features]
default = []
