[package]
name = "burn-central-macros"
authors.workspace = true
categories.workspace = true
description = "Macros for Burn Central SDK and CLI."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
strum.workspace = true
uuid.workspace = true
syn-serde.workspace = true
