[package]
name = "burn-central-package"
keywords = ["tracel", "burn-central", "burn", "sdk"]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Provides tools to package your Burn projects"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-package"

edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cargo_metadata = "0.21.0"
cargo-util-schemas = "0.8.2"
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
tar = { version = "0.4", default-features = false }
walkdir = "2"
ignore = "0.4"
gix = { version = "0.72", default-features = false, features = ["dirwalk", "status"]}
toml = "0.8.2"
toml_edit = { version = "0.23", features = ["serde"] }
anyhow = "1"
unicase = "2.8.1"
lazycell = "1.3.0"
serde-untagged = "0.1.7"
serde_ignored = "0.1.12"
sha2 = "0.10"
pathdiff = "0.2.3"
serde = { workspace = true, features = ["derive"] }
colored = { workspace = true }
derive-new = { workspace = true }