[package]
name = "burn-central-runtime"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
ndarray-stub = ["burn/ndarray"]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.98"
burn-central-core = { workspace = true }
burn = { workspace = true }
thiserror = { workspace = true }
variadics_please = { workspace = true }
tynm = { workspace = true, features = ["info"] }
syn = { workspace = true }
strum = { workspace = true }
derive_more = { workspace = true, features = [
    "deref",
    "from",
    "display",
    "unwrap",
] }
clap = { workspace = true, features = ["derive"], optional = true }
log = { workspace = true, features = ["std"] }
env_logger = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true, default-features = false, features = [
    "crossbeam-channel",
    "std",
] }
[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
serde = { workspace = true }
