[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Burn Central."
keywords = ["tracel", "burn-central", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "burn-central"
readme.workspace = true
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central"
version.workspace = true
rust-version.workspace = true

[dependencies]
burn-central-core.workspace = true
burn-central-macros.workspace = true
burn-central-runtime.workspace = true
