[package]
name = "burn-central"
authors.workspace = true
categories.workspace = true
description = "High-level Burn Central SDK"
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = []
station = ["burn-central-experiment/station"]

[dependencies]
burn-central-macros.workspace = true
burn-central-runtime.workspace = true
burn-central-experiment.workspace = true
burn-central-inference.workspace = true
burn-central-fleet.workspace = true
burn-central-artifact.workspace = true
burn-central-dataset.workspace = true
burn-central-client.workspace = true
