[package]
name = "burn-station"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
burn-central-client = { workspace = true }
burn-central-experiment = { workspace = true }
burn-central-artifact = { workspace = true }

burn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.20.0", features = ["base64", "macros"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
