[package]
name = "heat-macros"
edition.workspace = true
version.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
strum = { workspace = true }

[features]
wgpu = []
tch = []
ndarray = []