[package]
name = "heat-sdk-cli-macros"
edition.workspace = true
version.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
toml = "0.8.14"
serde = { version = "1.0.204", features = ["derive"] }
syn-serde = { version = "0.3.1", features = ["json"] }

[features]
wgpu = []
tch = []
ndarray = []
