[package]
name = "heat-sdk"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/heat-sdk"
edition.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = []
cli = ["dep:heat-sdk-cli", "heat-sdk-cli-macros/build-cli"]

[dependencies]
heat-sdk-cli-macros = { path = "../heat-sdk-cli-macros" }
heat-sdk-cli = { path = "../heat-sdk-cli", optional = true }

burn = { workspace = true, features = ["train"] }

log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { version = "0.8.5" }
thiserror = { workspace = true }
tracing = { version = "0.1.40" }
tracing-core = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.18" }
tungstenite = { version = "0.21.0" }
