[package]
authors = ["Tracel Technologies Inc."]
categories = ["development-tools"]
description = "Tracel Heat SDK."
keywords = ["tracel", "heat", "burn", "sdk"]
edition.workspace = true
license.workspace = true
name = "heat-sdk"
readme.workspace = true
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/head-sdk"
version.workspace = true
rust-version = "1.79"

[features]

[dependencies]
burn = { workspace = true, features = ["train"] }

derive-new = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1.40" }
tracing-core = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.18" }
tungstenite = { version = "0.21.0" }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
