[package]
name = "tracel-artifact"
description = "Artifact bundle and transfer utilities for Tracel SDK."
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
